# jni

./: .gitignore  JniSample.c  JniSample.java  Makefile  Makefile.am  Makefile.in  Procfile  command.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool  pom.xml
include/: JniSample.h
source/: JniSample.c
src/main/java/: JniSample.java
