#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([JniSample], [0.1], [tabe@salesforce.com])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([JniSample.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

LT_INIT

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([string.h JniSample.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
